Added the instruction text as provided by the Scrum Meister.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
         </div>
         <div id="displaySplashInstructionsContainer">
             <h2 class="instructionsOverlayTitle">How to play the game?</h2>
-            <p class="intructionsOverlayText"></p>
+            <p class="intructionsOverlayText">Aloha!
+                Get ready to ride the wave dude!
+                Just click to start, then when you're ready hit the LEFT &#8592 then RIGHT &#8594 buttons alternately, bro!
+                Go as fast as you can but make sure you don't press the same button twice in a row because you'll be stuck in the foam!
+                Shakas brah! &#129305</p>
             <div>
                 <button id="startGameButton">START!</button>
             </div> 
