changed the arrow icons to use HTML elements same with the call me dude emoji.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                 Get ready to ride the wave dude!
                 Just click to start, then when you're ready hit the LEFT &#8592 then RIGHT &#8594 buttons alternately, bro!
                 Go as fast as you can but make sure you don't press the same button twice in a row because you'll be stuck in the foam!
-                Shakas brah! &#129305</p>
+                Shakas brah! &#129305
+            </p>
             <div>
                 <button id="startGameButton">START!</button>
             </div> 
