Added more semantic classes to the html ready for CSS styling.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
     <main>
         <div class="topSplashContainer">
-            <div>
+            <div class="splashTitleContainer">
                 <h1 class="splashTitle">Placeholder Title</h1>
             </div>
-            <div>
+            <div class="leaderSurfboardContainer">
                 <button id="leaderSurfboard">Leader Surf Board</button>
             </div>
         </div>
@@ -30,7 +30,7 @@
                 Go as fast as you can but make sure you don't press the same button twice in a row because you'll be stuck in the foam!
                 Shakas brah! &#129305
             </p>
-            <div>
+            <div class="startGameButtonContainer">
                 <button id="startGameButton">START!</button>
             </div> 
         </div>
