Changed the class names after Peer Review

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </head>
 <body>
     <main>
-        <div class="topSplashContainer">
-            <div class="splashTitleContainer">
-                <h1 class="splashTitle">Placeholder Title</h1>
+        <div class="landingTopContainer">
+            <div class="landingTitleContainer">
+                <h1 class="landingTitle">Placeholder Title</h1>
             </div>
             <div class="leaderSurfboardContainer">
                 <button id="leaderSurfboard">Leader Surf Board</button>
