updated html with main game container and updated display css

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <main>
         <div class="landingTopContainer">
+            <div class="landingLeft"></div>
             <div class="landingTitleContainer">
                 <h1 class="landingTitle">Placeholder Title</h1>
             </div>
@@ -22,22 +23,22 @@
                 <button id="leaderSurfboard">Leader Surf Board</button>
             </div>
         </div>
-        <div id="displaySplashInstructionsContainer">
-            <h2 class="instructionsOverlayTitle">How to play the game?</h2>
-            <p class="intructionsOverlayText">Aloha!
-                Get ready to ride the wave dude!
-                Just click to start, then when you're ready hit the LEFT &#8592 then RIGHT &#8594 buttons alternately, bro!
-                Go as fast as you can but make sure you don't press the same button twice in a row because you'll be stuck in the foam!
-                Shakas brah! &#129305
-            </p>
-            <div class="startGameButtonContainer">
-                <button id="startGameButton">START!</button>
-            </div> 
-        </div>
         <div id="mainGameContainer">
             <div class="sky"></div>
             <div class="waves"></div>
             <div id="avatar"></div>
+            <div id="displaySplashInstructionsContainer">
+                <h2 class="instructionsOverlayTitle">How to play the game?</h2>
+                <p class="intructionsOverlayText">Aloha!
+                    Get ready to ride the wave dude!
+                    Just click to start, then when you're ready hit the LEFT &#8592 then RIGHT &#8594 buttons alternately, bro!
+                    Go as fast as you can but make sure you don't press the same button twice in a row because you'll be stuck in the foam!
+                    Shakas brah! &#129305
+                </p>
+                <div class="startGameButtonContainer">
+                    <button id="startGameButton">START!</button>
+                </div>
+            </div>
         </div>
         <footer>
 
