last version css and update on html

--- a/index.html
+++ b/index.html
@@ -24,17 +24,19 @@
             </div>
         </div>
         <div id="mainGameContainer">
-            <div class="sky"></div>
+            <div class="sky">
+                <div id="avatar"></div>
+            </div>
             <div class="waves"></div>
-            <div id="avatar"></div>
             <div id="displaySplashInstructionsContainer">
                 <h2 class="instructionsOverlayTitle">How to play the game?</h2>
-                <p class="intructionsOverlayText">Aloha!
-                    Get ready to ride the wave dude!
-                    Just click to start, then when you're ready hit the LEFT &#8592 then RIGHT &#8594 buttons alternately, bro!
-                    Go as fast as you can but make sure you don't press the same button twice in a row because you'll be stuck in the foam!
-                    Shakas brah! &#129305
-                </p>
+                <div class="intructionsOverlayText">
+                    <p>Aloha!</p>
+                    <p>Get ready to ride the wave dude!</p>
+                    <p>Just click to start, then when you're ready hit the LEFT &#8592 then RIGHT &#8594 buttons alternately, bro!
+                    Go as fast as you can but make sure you don't press the same button twice in a row because you'll be stuck in the foam!</p>
+                    <p>Shakas brah! &#129305</p>
+                </div>
                 <div class="startGameButtonContainer">
                     <button id="startGameButton">START!</button>
                 </div>
