Changed positioning of the splash.

--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
                 <button id="leaderSurfboard">Leader Surf Board</button>
             </div>
         </div>
-        <div id="mainGameContainer">
-            <div class="sky">
-                <div id="avatar"></div>
-            </div>
+        <div class="main-container">
+            <div id="mainGameContainer">
+                <div class="sky">
+                    <div id="avatar"></div>
+                </div>
             <div class="waves"></div>
             <div id="displaySplashInstructionsContainer">
                 <h2 class="instructionsOverlayTitle">How to play the game?</h2>
@@ -41,6 +42,7 @@
                     <button id="startGameButton">START!</button>
                 </div>
             </div>
+        </div>
         </div>
         <footer>
 
