--- a/index.html
+++ b/index.html
@@ -25,8 +25,13 @@
         </div>
         <div class="main-container">
             <div id="mainGameContainer">
-                <div class="sky">
-                    <div id="avatar"></div>
+                <div id="cloud-intro"></div>
+                <div class="sun"></div>
+                <div class="ocean">
+                  <div class="wave"></div>
+                  <div class="wave"></div>
+                  <div class="wave"></div>
+                  <div id="avatar"></div>
                 </div>
             <div class="waves"></div>
             <div id="displaySplashInstructionsContainer">
