--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="main-container">
             <div id="mainGameContainer">
-                <div id="cloud-intro"></div>
+                <div class="cloud-background"></div>
                 <div class="sun"></div>
                 <div class="ocean">
                   <div class="wave"></div>
