--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="landingTopContainer">
             <div class="landingLeft"></div>
             <div class="landingTitleContainer">
-                <h1 class="landingTitle">Placeholder Title</h1>
+                <h1 class="landingTitle">SURFWAVE Fury</h1>
             </div>
             <div class="leaderSurfboardContainer">
                 <button id="leaderSurfboard">Leader Surf Board</button>
