Changes from Jo's PR added.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <button id="leaderSurfboard">Leader Surf Board</button>
             </div>
         </div>
-        <div class="main-container">
+        <div class="mainContainer">
             <div id="mainGameContainer">
                 <div class="cloud-background"></div>
                 <div class="sun"></div>
