Made Ash's changes.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h1 class="landingTitle">SURFWAVE Fury</h1>
             </div>
             <div class="leaderSurfboardContainer">
-                <button id="leaderSurfboard">Leader Surf Board</button>
+                <!-- <button id="leaderSurfboard">Leader Surf Board</button> -->
             </div>
         </div>
         <div class="mainContainer">
@@ -39,18 +39,16 @@
                 <div class="intructionsOverlayText">
                     <p>Aloha!</p>
                     <p>Get ready to ride the wave dude!</p>
-                    <p>Just click to start, then when you're ready hit the LEFT &#8592 then RIGHT &#8594 buttons alternately, bro!
+                    <p>Just click to start, then when you're ready hit the LEFT &#8592; then RIGHT &#8594; buttons alternately, bro!
                     Go as fast as you can but make sure you don't press the same button twice in a row because you'll be stuck in the foam!</p>
-                    <p>Shakas brah! &#129305</p>
+                    <p>Shakas brah! &#129305;</p>
                 </div>
-                <div class="startGameButtonContainer">
-                    <button id="startGameButton">START!</button>
-                </div>
+                <button id="startGameButton">START!</button>
             </div>
         </div>
         </div>
         <footer>
-
+            <p>Created By The Surfing Penguins - 2022!</p>
         </footer>
     </main>
 </body>
