updated class of Timer. updated stlye.css with new class changed the ID used in timer.js for our HTML.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <main>
         <div class="landingTopContainer">
-            <div class="landingLeft"></div>
+            <div class="stopwatchContainer"></div>
             <div class="landingTitleContainer">
                 <h1 class="landingTitle">SURFWAVE Fury</h1>
             </div>
