added div and form

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -45,6 +45,14 @@
                 </div>
                 <button id="startGameButton">START!</button>
             </div>
+                <div id="displayEndGameContainer">
+                    <form>
+                        <input id="nameField" type="text" name="Name" maxlength=3>
+                        <label for="nameField">Name</label>
+                        <input type="submit" value="Save!">
+                    </form>
+                    
+                </div>
         </div>
         </div>
         <footer>
