--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                         <input id="nameField" type="text" name="Name" maxlength=3>
                         <label for="nameField">Name</label>
                         <input type="submit" value="Save!">
+                        <input type="button" onclick="history.go(0)" VALUE="refresh">
                     </form>
-                    
                 </div>
         </div>
         </div>
