html form updated and styling update

--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@
                 <button id="startGameButton">START!</button>
             </div>
                 <div id="displayEndGameContainer">
-                    <form>
+                    <p>Congrats surfer dude &#129305;</p>
+                    <p>Enter your name to save your time! See you on flip-side!</p>
+                    <form id="formContainer">
+                        <label for="nameField">Name:</label>
                         <input id="nameField" type="text" name="Name" maxlength=3>
-                        <label for="nameField">Name</label>
                         <input type="submit" value="Save!">
-                        <input type="button" onclick="history.go(0)" VALUE="refresh">
+                        <input type="button" onclick="history.go(0)" VALUE="Play again!">
                     </form>
                 </div>
         </div>
