made HTML change requested by Rayna.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <div class="landingTopContainer">
             <div class="stopwatchContainer">
-                <p class="stopwatchText">Stopwatch: <span id="stopwatchSecondsDisplay">0</span> seconds</p>
+                <p class="stopwatchText">Time: <span id="stopwatchSecondsDisplay">0</span>s</p>
             </div>
             <div class="landingTitleContainer">
                 <h1 class="landingTitle">SURFWAVE FURY</h1>
