--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <p class="stopwatchText">Time: <span id="stopwatchSecondsDisplay">0</span>s</p>
             </div>
             <div class="landingTitleContainer">
-                <h1 class="landingTitle">SURFWAVE FURY</h1>
+                <h1 class="landingTitle">Surfwave Fury</h1>
             </div>
             <div class="leaderSurfboardContainer">
                 <!-- <button id="leaderSurfboard">Leader Surf Board</button> -->
