Added all changes for Rayna.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h1 class="landingTitle">Surfwave Fury</h1>
             </div>
             <div class="leaderSurfboardContainer">
-                <!-- <button id="leaderSurfboard">Leader Surf Board</button> -->
+                <button id="leaderSurfboard">Leader Surf Board</button>
             </div>
         </div>
         <div class="mainContainer">
