changed the title

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <script src="./script.js" defer></script> 
-    <title>Surfing Penguins - JS Game. </title>
+    <title>SURFWAVE Fury</title>
 </head>
 <body>
     <main>
