took out extra p tag, added button, added h2 leaderboard

--- a/leaderboardPage.html
+++ b/leaderboardPage.html
@@ -16,15 +16,17 @@
 <main>
     <div class="landingTopContainer">
         <div class="landingTitleContainer">
-            <h1 class="landingTitle">Surfwave Fury Learderboard</h1>
+            <h1 class="landingTitle">Surfwave Fury</h1>
+            <h2>Leaderboard</h2>
+        </div>
+        <div class="leaderSurfboardContainer">
+            <button id="leaderSurfboard">Back to Surfwave Fury</button>
         </div>
     </div>
     <div class="mainContainer">
         <div id="mainGameContainer">
 
             <div class="intructionsOverlayText">
-                <p>Leaderboard</p><p></p>
-                <p>Shakas brah! &#129305;</p>
             </div>
         </div>
     </div>
