updated button style

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                     <form id="formContainer">
                         <label for="nameField">Name:</label>
                         <input id="nameField" type="text" name="Name" maxlength=3>
-                        <input type="submit" value="Save!">
-                        <input type="button" onclick="history.go(0)" VALUE="Play again!">
+                        <input class="saveButton" type="submit" value="Save!">
+                        <input class="playButton" type="button" onclick="history.go(0)" VALUE="Play again!">
                     </form>
                 </div>
         </div>
