styling and minor HTML changes for the leaderboardPage.html and style.css

--- a/leaderboardPage.html
+++ b/leaderboardPage.html
@@ -14,19 +14,23 @@
 </head>
 <body>
 <main>
-    <div class="landingTopContainer">
-        <div class="landingTitleContainer">
-            <h1 class="landingTitle">Surfwave Fury</h1>
-            <h2>Leaderboard</h2>
+    <div class="leaderboardTopContainer">
+        <div class="leaderboardTitleContainer">
+            <h1 class="leaderboardTitle">Surfwave Fury</h1>
+            <h2 class="leaderboardSubTitle">Leaderboard</h2>
         </div>
         <div class="leaderSurfboardContainer">
             <button id="leaderSurfboard">Back to Surfwave Fury</button>
         </div>
     </div>
-    <div class="mainContainer">
-        <div id="mainGameContainer">
+    <div class="leaderboardContainer">
+        <div id="mainLeaderboardContainer">
+            <div class="leaderboardHeader">
+                <p>Name: </p>
+                <p>Time: </p>
+            </div>
+            <div id="leaderboardContent">
 
-            <div class="intructionsOverlayText">
             </div>
         </div>
     </div>
