--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
                 <div id="displayEndGameContainer">
                     <p>Congrats surfer dude &#129305;</p>
-                    <p>Enter your name to save your time! See you on flip-side!</p>
+                    <p>Enter your name to save your time! Catch you on flip-side!</p>
                     <form id="formContainer">
                         <label for="nameField">Name:</label>
                         <input id="nameField" type="text" name="Name" maxlength=3>
