Completed basic stlyling for leaderboardPage.html and made minor HTML changes.

--- a/leaderboardPage.html
+++ b/leaderboardPage.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <script src="./script.js" defer></script>
-    <title>Surfwave Fury leaderboard</title>
+    <title>Surfwave Fury Leaderboard</title>
 </head>
 <body>
 <main>
@@ -25,78 +25,6 @@
     </div>
     <div class="leaderboardContainer">
         <div id="mainLeaderboardContainer">
-            <div class="leaderboardHeader">
-                <p>Name: </p>
-                <p>Time: </p>
-            </div>
-            <div id="leaderboardContent">
-                <p>MCO</p>
-                <p>5.78s</p>
-            </div>
-            <div id="leaderboardContent">
-                <p>MCO</p>
-                <p>5.78s</p>
-            </div>
-            <div id="leaderboardContent">
-                <p>MCO</p>
-                <p>5.78s</p>
-            </div>
-            <div id="leaderboardContent">
-                <p>MCO</p>
-                <p>5.78s</p>
-            </div>
-            <div id="leaderboardContent">
-                <p>MCO</p>
-                <p>5.78s</p>
-            </div>
-            <div id="leaderboardContent">
-                <p>MCO</p>
-                <p>5.78s</p>
-            </div>
-            <div id="leaderboardContent">
-                <p>MCO</p>
-                <p>5.78s</p>
-            </div>
-            <div id="leaderboardContent">
-                <p>MCO</p>
-                <p>5.78s</p>
-            </div>
-            <div id="leaderboardContent">
-                <p>MCO</p>
-                <p>5.78s</p>
-            </div>
-            <div id="leaderboardContent">
-                <p>MCO</p>
-                <p>5.78s</p>
-            </div>
-            <div id="leaderboardContent">
-                <p>MCO</p>
-                <p>5.78s</p>
-            </div>
-            <div id="leaderboardContent">
-                <p>MCO</p>
-                <p>5.78s</p>
-            </div>
-            <div id="leaderboardContent">
-                <p>MCO</p>
-                <p>5.78s</p>
-            </div>
-            <div id="leaderboardContent">
-                <p>MCO</p>
-                <p>5.78s</p>
-            </div>
-            <div id="leaderboardContent">
-                <p>MCO</p>
-                <p>5.78s</p>
-            </div>
-            <div id="leaderboardContent">
-                <p>MCO</p>
-                <p>5.78s</p>
-            </div>
-            <div id="leaderboardContent">
-                <p>MCO</p>
-                <p>5.78s</p>
-            </div>
         </div>
     </div>
     <footer>
