--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <form id="formContainer">
                         <label for="nameField">Name:</label>
                         <input id="nameField" type="text" name="Name" maxlength=3>
-                        <input class="saveButton" type="submit" value="Save!">
+                        <input class="saveButton" type="button" onclick="getName(this.form)" value="Save!">
                         <input class="playButton" type="button" onclick="history.go(0)" VALUE="Play again!">
                     </form>
                 </div>
