Edited the HTML layout and styling.

--- a/leaderboardPage.html
+++ b/leaderboardPage.html
@@ -17,6 +17,9 @@
     <div class="leaderboardTopContainer">
         <div class="leaderboardTitleContainer">
             <h1 class="leaderboardTitle">Surfwave Fury</h1>
+        </div>
+        <div class="leaderboardSurfboardContainer">
+            <img class="leaderboardSurfboardImage" src="./imgs/surfboardLeaderboard.png" alt="surfboard"/>
             <h2 class="leaderboardSubTitle">Leaderboard</h2>
         </div>
         <div class="leaderSurfboardContainer">
@@ -25,6 +28,10 @@
     </div>
     <div class="leaderboardContainer">
         <div id="mainLeaderboardContainer">
+            <div class="leaderboardHeader">
+                <p>Name: </p>
+                <p>Time: </p>
+            </div>
         </div>
     </div>
     <footer>
