removed alert at end of game

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 <button id="startGameButton">START!</button>
             </div>
                 <div id="displayEndGameContainer">
-                    <p>Congrats surfer dude &#129305;</p>
-                    <p>Enter your name to save your time! Catch you on flip-side!</p>
+                    <p>Far out brah! That was totally radical &#129305;</p>
+                    <p>Enter your name to save your time! Catch you on flip!</p>
                     <form id="formContainer">
                         <label for="nameField">Name:</label>
                         <input id="nameField" type="text" name="Name" maxlength=3>
