Penguin added, need to tweak positioning.

--- a/leaderboardPage.html
+++ b/leaderboardPage.html
@@ -22,6 +22,7 @@
             <img class="leaderboardSurfboardImage" src="./imgs/surfboardLeaderboard.png" alt="surfboard"/>
             <h2 class="leaderboardSubTitleOne">Leader</h2>
             <h2 class="leaderboardSubTitleTwo">Board</h2>
+            <img class="surfingPenguinThumbsUp" src="./imgs/surfingPenguinThumbsUp.png" alt="penguin giving a thumbs up"/>
         </div>
         <div class="leaderSurfboardContainer">
             <button id="leaderSurfboard">Back to Surfwave Fury</button>
@@ -35,6 +36,7 @@
             </div>
         </div>
     </div>
+    
     <footer>
         <p>Created By The Surfing Penguins - 2022!</p>
     </footer>
