--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <div class="landingTitleContainer">
                 <h1 class="landingTitle">Surfwave Fury</h1>
             </div>
+            <div class="leaderSurfboardContainer">
+                <button id="leaderSurfboard">Leader Surf Board</button>
+            </div>
         </div>
         <div class="mainContainer">
             <div id="mainGameContainer">
