following trainer review, removed inline JS from HTML file, renamed some variables and fixed incorrect indentation

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                     <p>Enter your name to save your time! Catch you on flip!</p>
                     <form id="formContainer">
                         <label for="nameField">Name:</label>
-                        <input id="nameField" type="text" name="Name" maxlength=3>
-                        <input class="saveButton" type="button" onclick="getName(this.form)" value="Save!">
-                        <input class="playButton" type="button" onclick="history.go(0)" VALUE="Play again!">
+                        <input id="nameField" type="text" name="name" maxlength="3">
+                        <input id="saveButton" type="button" value="Save!">
+                        <input id="playButton" type="button" VALUE="Play again!">
                     </form>
                 </div>
         </div>
