--- a/leaderboardPage.html
+++ b/leaderboardPage.html
@@ -24,7 +24,7 @@
             <h2 class="leaderboardSubTitleTwo">Board</h2>
         </div>
         <div class="leaderSurfboardContainer">
-            <button id="leaderSurfboard">Back to Surfwave Fury</button>
+            <a href="index.html"<button id="leaderSurfboard">Back to Surfwave Fury</button></a>
         </div>
     </div>
     <div class="leaderboardContainer">
