--- a/leaderboardPage.html
+++ b/leaderboardPage.html
@@ -20,8 +20,10 @@
         </div>
         <div class="leaderboardSurfboardContainer">
             <img class="leaderboardSurfboardImage" src="./imgs/surfboardLeaderboard.png" alt="surfboard"/>
-            <h2 class="leaderboardSubTitleOne">Leader</h2>
-            <h2 class="leaderboardSubTitleTwo">Board</h2>
+            <div class="leaderboardSurfboardTextContainer">
+                <h2 class="leaderboardSubTitleOne">Leader</h2>
+                <h2 class="leaderboardSubTitleTwo">Board</h2>
+            </div>
         </div>
         <div class="leaderSurfboardContainer">
             <button id="leaderSurfboard">Back to Surfwave Fury</button>
