added event listener on page load to append leaderboard scores onto page

--- a/leaderboardPage.html
+++ b/leaderboardPage.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <script src="./script.js" defer></script>
+    <script src="./leaderboardScript.js" defer></script>
     <title>Surfwave Fury Leaderboard</title>
 </head>
 <body>
