Changed the id's classes on buttons and more positioning changes (hopefully the last please god. )

--- a/leaderboardPage.html
+++ b/leaderboardPage.html
@@ -18,8 +18,8 @@
         <div class="leaderboardTitleContainer">
             <h1 class="leaderboardTitle">Surfwave Fury</h1>
         </div>
-        <div class="leaderSurfboardContainer">
-            <button id="leaderSurfboard">Back to Surfwave Fury</button>
+        <div class="backButtonContainer">
+            <button id="backButton">Back to Surfwave Fury</button>
         </div>
     </div>
     <div class="leaderboardContainer">
