minor syntax changes, removed comments and removed duplicate codes

--- a/leaderboardPage.html
+++ b/leaderboardPage.html
@@ -25,7 +25,7 @@
             <h2 class="leaderboardSubTitleTwo">Board</h2>
         </div>
         <div class="leaderSurfboardContainer">
-            <button id="leaderSurfboard">Back to Surfwave Fury</button>
+            <button id="backButton">Back to Surfwave Fury</button>
         </div>
     </div>
     <div class="leaderboardContainer">
