--- a/leaderboardPage.html
+++ b/leaderboardPage.html
@@ -23,8 +23,8 @@
             <h2 class="leaderboardSubTitleOne">Leader</h2>
             <h2 class="leaderboardSubTitleTwo">Board</h2>
         </div>
-        <div class="leaderSurfboardContainer">
-            <a href="index.html"<button id="leaderSurfboard">Back to Surfwave Fury</button></a>
+        <div class="backButtonContainer">
+            <a href="index.html"<button id="backbutton">Back to Surfwave Fury</button></a>
         </div>
     </div>
     <div class="leaderboardContainer">
