--- a/leaderboardPage.html
+++ b/leaderboardPage.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/14c42a68eb.js" crossorigin="anonymous"></script>
     <script src="./script.js" defer></script>
     <title>Surfwave Fury Leaderboard</title>
 </head>
@@ -37,6 +38,11 @@
         </div>
     </div>
     <footer>
+        <div class="linkToGithubContainer">
+            <a href="https://github.com/iO-Academy/2022-july-keyboard-race" target="_blank" class="linkToGithub">
+                <i class="fa-brands fa-github"></i>
+            </a>
+        </div>
         <p>Created By The Surfing Penguins - 2022!</p>
     </footer>
 </main>
