following trainer review; fixed indentation, excess JS lines and some minor HTML bad practice

--- a/leaderboardPage.html
+++ b/leaderboardPage.html
@@ -14,34 +14,33 @@
     <title>Surfwave Fury Leaderboard</title>
 </head>
 <body>
-<main>
-    <div class="leaderboardTopContainer">
-        <div class="leaderboardTitleContainer">
-            <h1 class="leaderboardTitle">Surfwave Fury</h1>
+    <main>
+        <div class="leaderboardTopContainer">
+            <div class="leaderboardTitleContainer">
+                <h1 class="leaderboardTitle">Surfwave Fury</h1>
+            </div>
+            <div class="backButtonContainer">
+                <button id="backButton">Back to Surfwave Fury</button>
+            </div>
         </div>
-        <div class="backButtonContainer">
-            <button id="backButton">Back to Surfwave Fury</button>
-        </div>
-    </div>
-    <div class="leaderboardContainer">
-        <div id="mainLeaderboardContainer">
-            <div class="leaderboardSurfboardContainer">
-                <img class="leaderboardSurfboardImage" src="./imgs/surfboardLeaderboard.png" alt="surfboard"/>
-                <div class="leaderboardSurfboardTextContainer">
-                    <h2 class="leaderboardSubTitleOne">Leader</h2>
-                    <h2 class="leaderboardSubTitleTwo">Board</h2>
+        <div class="leaderboardContainer">
+            <div id="mainLeaderboardContainer">
+                <div class="leaderboardSurfboardContainer">
+                    <img class="leaderboardSurfboardImage" src="./imgs/surfboardLeaderboard.png" alt="surfboard"/>
+                    <div class="leaderboardSurfboardTextContainer">
+                        <h2><span class="leaderboardSubTitleOne">Leader</span><span class="leaderboardSubTitleTwo">Board</span></h2>
+                    </div>
+                </div>
+                <div class="leaderboardHeader">
+                    <p>Name: </p>
+                    <p>Time: </p>
                 </div>
             </div>
-            <div class="leaderboardHeader">
-                <p>Name: </p>
-                <p>Time: </p>
-            </div>
         </div>
-    </div>
-    <footer>
-        <p>Created By The Surfing Penguins - 2022!</p>
-        <img class="surfingPenguinThumbsUp" src="./imgs/surfingPenguinThumbsUp.png" alt="penguin giving a thumbs up"/>
-    </footer>
-</main>
+        <footer>
+            <p>Created By The Surfing Penguins - 2022!</p>
+            <img class="surfingPenguinThumbsUp" src="./imgs/surfingPenguinThumbsUp.png" alt="penguin giving a thumbs up"/>
+        </footer>
+    </main>
 </body>
 </html>
