--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                 <div class="cloud-background"></div>
                 <div class="sun"></div>
                 <div id="avatar"></div>
+                <div id="island"></div>
+                <div id="endFlag"></div>
                 <div class="ocean">
                   <div class="wave"></div>
                   <div class="wave"></div>
