changed buttons to a tags

--- a/leaderboardPage.html
+++ b/leaderboardPage.html
@@ -20,7 +20,9 @@
                 <h1 class="leaderboardTitle">Surfwave Fury</h1>
             </div>
             <div class="backButtonContainer">
-                <button id="backButton">Back to Surfwave Fury</button>
+                <a href="index.html">
+                    <button id="backButton">Back to Surfwave Fury</button>
+                </a>
             </div>
         </div>
         <div class="leaderboardContainer">
