--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 <h1 class="landingTitle">Surfwave Fury</h1>
             </div>
             <div class="leaderSurfboardContainer">
-                <button id="leaderSurfboard">Leader Surf Board</button>
+                <a href="leaderboardPage.html">
+                    <button id="leaderSurfboard">Leader Surf Board</button>
+                </a>
             </div>
         </div>
         <div class="mainContainer">
