fixed leaderboard title styling

--- a/leaderboardPage.html
+++ b/leaderboardPage.html
@@ -30,7 +30,10 @@
                 <div class="leaderboardSurfboardContainer">
                     <img class="leaderboardSurfboardImage" src="./imgs/surfboardLeaderboard.png" alt="surfboard"/>
                     <div class="leaderboardSurfboardTextContainer">
-                        <h2><span class="leaderboardSubTitleOne">Leader</span><span class="leaderboardSubTitleTwo">Board</span></h2>
+                        <h2>
+                            <span class="leaderboardSubTitleOne">Leader</span>
+                            <span class="leaderboardSubTitleTwo">Board</span>
+                        </h2>
                     </div>
                 </div>
                 <div class="leaderboardHeader">
