limited leaderboard to top 12 scores

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="leaderSurfboardContainer">
                 <a href="leaderboardPage.html">
-                    <button id="leaderSurfboard">Leader Surf Board</button>
+                    <button id="leaderSurfboardButton">Leader Surf Board</button>
                 </a>
             </div>
         </div>
