--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h1 class="landingTitle">Surfwave Fury</h1>
             </div>
             <div class="leaderSurfboardContainer">
-                <a href="leaderboardPage.html"<button id="leaderSurfboard">Leader Surf Board</button></a>
+                <a href="leaderboardPage.html" id="leaderSurfboard">Leader Surf Board</a>
             </div>
         </div>
         <div class="mainContainer">
