--- a/leaderboardPage.html
+++ b/leaderboardPage.html
@@ -24,7 +24,7 @@
             <h2 class="leaderboardSubTitleTwo">Board</h2>
         </div>
         <div class="backButtonContainer">
-            <a href="index.html"<button id="backbutton">Back to Surfwave Fury</button></a>
+            <a href="index.html" id="backbutton">Back to Surfwave Fury</a>
         </div>
     </div>
     <div class="leaderboardContainer">
