Made changes requested

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
                 <div id="displayEndGameContainer">
                     <p>Far out brah! That was totally radical &#129305;</p>
-                    <p>Enter your name to save your time! Catch you on flip!</p>
+                    <p>Enter your name to save your time! Catch you on the flip!</p>
                     <form id="formContainer">
                         <label for="nameField">Name:</label>
                         <input id="nameField" type="text" name="name" maxlength="3">
